test/good/automatic/base/without_input/ret_zero/0011.lat
// block scope
int main() {
  int a = 1;
  int b = 1;
  int c = 1;
  printInt(a);
  printInt(b);
  printInt(c);
  printString("--------");
  {
    int a = 2;
    printInt(a);
    printInt(b);
    printInt(c);
    printString("--------");
    {
      int b = 3;
      printInt(a);
      printInt(b);
      printInt(c);
      a = 3;
      c = 3;
      printString("--------");
    }
    printInt(a);
    printInt(b);
    printInt(c);
    printString("--------");
    b = 2;
    c = 2;
  }
  printInt(a);
  printInt(b);
  printInt(c);

  {{return 0;}}
}