test/bad/automatic/base/compile_time/0052.lat
int return() {
  return 2;
}

int main() {
  return return();
}
